--- a/static/auth.html
+++ b/static/auth.html
@@ -1,73 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Set Service Key</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: #f5f5f5;
-      color: #1a1a1a;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
-    }
-    h1 { margin-bottom: 1rem; }
-    input, button {
-      font-size: 1rem;
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-    }
-    button {
-      background: #444;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover { background: #222; }
-  </style>
+  <link rel="stylesheet" href="./styles-elements.css">
+  <link rel="stylesheet" href="./styles.css">
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Funnel+Display:wght@300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
-  <h1>Configure Service Key</h1>
-  <p>Enter your service key to enable file operations:</p>
-  <input type="password" id="keyInput" placeholder="Service Key" size="30">
-  <button id="saveBtn">Save Key</button>
-  <p id="status"></p>
+  <div class="msg-box">
+    <div class="space-medium"></div>
 
-  <script>
-    // Monkey‑patch fetch to add x-service-key header
-    (function() {
-      const orig = window.fetch;
-      window.fetch = (input, init = {}) => {
-        init.headers = init.headers || {};
-        const key = localStorage.getItem('serviceKey');
-        if (key) {
-          init.headers['x-service-key'] = key;
+    <div class="flex-row">
+      <h1>Configure Service Key</h1>
+    </div>
+
+    <div class="space-medium"></div>
+
+    <div class="flex-row">
+      <p>Enter your service key to enable file operations:</p>
+    </div>
+
+    <div class="space-small"></div>
+
+    <div class="flex-row">
+      <input type="password" id="keyInput" placeholder="Service Key" size="30">
+    </div>
+
+    <div class="space-small"></div>
+
+    <div class="flex-row">
+      <button id="saveBtn">Save Key</button>
+    </div>
+
+    <div class="space-small"></div>
+
+    <div class="flex-row">
+      <p id="status">Waiting for auth key...</p>
+    </div>
+
+    <div class="space-medium"></div>
+
+    <script>
+      // Monkey‑patch fetch to add x-service-key header
+      (function () {
+        const orig = window.fetch;
+        window.fetch = (input, init = {}) => {
+          init.headers = init.headers || {};
+          const key = localStorage.getItem('serviceKey');
+          if (key) {
+            init.headers['x-service-key'] = key;
+          }
+          return orig(input, init);
+        };
+      })();
+
+      // UI logic
+      const input = document.getElementById('keyInput');
+      const btn = document.getElementById('saveBtn');
+      const status = document.getElementById('status');
+
+      // preload
+      input.value = localStorage.getItem('serviceKey') || '';
+
+      btn.onclick = () => {
+        const v = input.value.trim();
+        if (!v) {
+          status.textContent = 'Key cannot be empty.';
+          // Add class for error styling
+          status.style.color = 'var(--color-status-error)';
+          return;
         }
-        return orig(input, init);
+        localStorage.setItem('serviceKey', v);
+        status.textContent = 'Saved!';
+        // Add class for success styling
+        status.style.color = 'var(--color-status-success)';
       };
-    })();
-
-    // UI logic
-    const input = document.getElementById('keyInput');
-    const btn = document.getElementById('saveBtn');
-    const status = document.getElementById('status');
-
-    // preload
-    input.value = localStorage.getItem('serviceKey') || '';
-
-    btn.onclick = () => {
-      const v = input.value.trim();
-      if (!v) {
-        status.textContent = 'Key cannot be empty.';
-        status.style.color = 'red';
-        return;
-      }
-      localStorage.setItem('serviceKey', v);
-      status.textContent = 'Saved! Now you can return to the File Manager.';
-      status.style.color = 'green';
-    };
-  </script>
+    </script>
 </body>
+
 </html>
