--- a/static/index.html
+++ b/static/index.html
@@ -9,33 +9,110 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Funnel+Display:wght@300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lexend:wght@100..900&family=Mozilla+Headline:wght@200..700&display=swap"
+        rel="stylesheet">
     <title>Julien Liakos</title>
-    <!-- Import your existing stylesheet -->
+
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="styles-elements.css" />
 </head>
 
 <body>
-    <!-- Header -->
+    <!-- Overlay starts visible so the initial B→C animation can play -->
+    <div id="page-transition-overlay" style="background:#111; position:fixed; inset:0; z-index:2147483647; pointer-events:none;
+        width:100vw; height:100vh; opacity:1; will-change:opacity; visibility:visible;">
+    </div>
+
+    <img class="blur-01 fullscreen darken-01" alt="" aria-hidden="true" sizes="100vw" loading="eager"
+        fetchpriority="high" src="graphics/bkg/wp3.jpg">
+
     <header class="flex-row nav-buttons">
-        <div class="space-small"></div>
-        <h1>Julien Liakos</h1>
+        <h1>
+            <a href="index.html" onclick="return tm.handleLinkClick(event, this)">Julien Liakos</a>
+        </h1>
     </header>
 
-    <!-- Centered “Under Construction” message -->
-    <main class="flex-center text-center flex-grow">
+    <main class="flex-center flex-grow">
         <div class="msg-box">
+            <div class="space-medium"></div>
             <div class="flex-center">
                 <div style="height: 100px; width: 100px;">
                     <img src="/graphics/SmnIcon_Circle_White.svg" alt="">
                 </div>
             </div>
             <div class="space-large"></div>
-            <h2>Under Construction</h2>
-            <p class="space-small"></p>
-            <p>This site is under construction, come back later for some cool stuff.</p>
+            <div class="container-inset">
+                <p class="text-center">
+                    From creative projects in Game Design, to Development projects like low-level data archiving
+                    libraries, I bridge the gap between art and development.
+                    <br><br>
+                    Pick something that interests you down below, and take a look...
+                </p>
+            </div>
+
+            <div class="space-large"></div>
+
+            <h4>My Work</h4>
+            <div class="space-small"></div>
+            <div class="flex-row flex-center-horizontal flex-grow">
+                <div class="space-small"></div>
+                <a href="technical-art" onclick="return tm.handleLinkClick(event, this)">Technical Art</a>
+                <div class="space-small"></div>
+                <a href="game-design" onclick="return tm.handleLinkClick(event, this)">Game Design</a>
+                <div class="space-small"></div>
+                <a href="development" onclick="return tm.handleLinkClick(event, this)">Development</a>
+            </div>
+
+            <div class="space-large"></div>
+
+            <h4>Contact</h4>
+            <div class="space-small"></div>
+            <div class="flex-row flex-center-horizontal flex-grow">
+                <div class="space-small"></div>
+
+                <!-- Email -->
+                <a id="contact-email"
+                   href="#"
+                   data-mode="email"
+                   data-email="julien_andrew@outlook.com"
+                   data-subject="Contacting%20from%20website"
+                   data-body="">
+                   Email
+                </a>
+
+                <div class="space-small"></div>
+
+                <!-- Discord handle only, no invite link -->
+                <a id="contact-discord"
+                   href="#"
+                   data-mode="discord"
+                   data-discord="@summonthecat">
+                   Discord
+                </a>
+
+                <div class="space-small"></div>
+            </div>
+
+            <div class="space-medium"></div>
         </div>
     </main>
+
+    <!-- Scripts -->
+    <script src="scripts/transitionManager.js"></script>
+    <script src="scripts/linkReplacer.js"></script>
+    <script>
+        // Initialize page transition
+        window.tm = new TransitionManager({
+            overlaySelector: '#page-transition-overlay',
+            duration: 300,
+            bufferTime: 30,
+            transitionEffect: 'fade'
+        });
+
+        // Initialize contact reveal logic
+        initContactLinks('#contact-email, #contact-discord');
+    </script>
 </body>
 
 </html>
