--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="styles-elements.css" />
+    <link rel="stylesheet" href="styles-mobile.css" />
 </head>
 
 <body>
