--- a/static/index.html
+++ b/static/index.html
@@ -14,9 +14,9 @@
         rel="stylesheet">
     <title>Julien Liakos</title>
 
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="styles-elements.css" />
-    <link rel="stylesheet" href="styles-mobile.css" />
+    <link rel="stylesheet" href="styles/styles-base.css" />
+    <link rel="stylesheet" href="styles/styles-elements.css" />
+    <link rel="stylesheet" href="styles/styles-mobile.css" />
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
     <header class="flex-row nav-buttons">
         <h1>
-            <a href="index.html" onclick="return tm.handleLinkClick(event, this)">Julien Liakos</a>
+            <a href="/" onclick="return tm.handleLinkClick(event, this)">Julien Liakos</a>
         </h1>
     </header>
 
