--- a/static/technical-art.html
+++ b/static/technical-art.html
@@ -8,51 +8,54 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Funnel+Display:wght@300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lexend:wght@100..900&family=Mozilla+Headline:wght@200..700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Funnel+Display:wght@300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lexend:wght@100..900&family=Mozilla+Headline:wght@200..700&display=swap"
+    rel="stylesheet">
 
   <title>Technical Art</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="styles-elements.css" />
-  <link rel="stylesheet" href="styles-mobile.css" />
+  <link rel="stylesheet" href="styles/styles-base.css" />
+  <link rel="stylesheet" href="styles/styles-elements.css" />
+  <link rel="stylesheet" href="styles/styles-mobile.css" />
 </head>
 
 <body>
   <!-- Page transition overlay: starts visible so B→C plays on load -->
-  <div id="page-transition-overlay"
-       style="background:#111; position:fixed; inset:0; z-index:2147483647; pointer-events:none;
+  <div id="page-transition-overlay" style="background:#111; position:fixed; inset:0; z-index:2147483647; pointer-events:none;
               width:100vw; height:100vh; opacity:1; will-change:opacity; visibility:visible;">
   </div>
 
   <!-- Background image that your overlay can mirror (if you enable backgroundFrom later) -->
-  <img class="blur-01 fullscreen darken-01" alt="" aria-hidden="true" sizes="100vw" loading="eager"
-       fetchpriority="high" src="graphics/bkg/wp3.jpg">
+  <img class="blur-01 fullscreen darken-01" alt="" aria-hidden="true" sizes="100vw" loading="eager" fetchpriority="high"
+    src="graphics/bkg/wp3.jpg">
 
   <!-- Header -->
   <header class="flex-row nav-buttons">
     <h1>
-      <a href="index.html" onclick="return tm.handleLinkClick(event, this)">Julien Liakos</a>
+      <a href="/" onclick="return tm.handleLinkClick(event, this)">Julien Liakos</a>
     </h1>
     <h4>Technical Art</h4>
   </header>
 
   <main class="flex-center text-center flex-grow">
-        <div class="msg-box">
-            <div class="space-large"></div>
-            <div class="flex-center">
-                <div style="height: 100px; width: 100px;">
-                    <img src="/graphics/SmnIcon_Circle_White.svg" alt="">
-                </div>
-            </div>
-            <div class="space-large"></div>
-            <h4>Under Construction</h4>
-            <p class="space-small"></p>
-            <p>This site is under construction, come back later for some cool stuff.</p>
-            <div class="space-large"></div>
+    <div class="msg-box">
+      <div class="space-large"></div>
+      <div class="flex-center">
+        <div style="height: 100px; width: 100px;">
+          <img src="/graphics/SmnIcon_Circle_White.svg" alt="">
         </div>
-    </main>
+      </div>
+      <div class="space-large"></div>
+      <h4>Under Construction</h4>
+      <p class="space-small"></p>
+      <p>This site is under construction, come back later for some cool stuff.</p>
+      <div class="space-large"></div>
+    </div>
+  </main>
 
   <!-- Transition manager: load, then initialize ONCE -->
   <script src="scripts/transitionManager.js"></script>
