--- a/static/technical-art.html
+++ b/static/technical-art.html
@@ -30,8 +30,11 @@
               width:100vw; height:100vh; opacity:1; will-change:opacity; visibility:visible;">
   </div>
 
+  <!-- Background Image -->
+  <img class="blur-01 fullscreen darken-01" alt="" aria-hidden="true" sizes="100vw" loading="eager" fetchpriority="high"
+    src="graphics/bkg/wp3.jpg">
+
   <!-- Slots -->
-  <div id="background-slot"></div>
   <div id="header-slot"></div>
   <div id="under-construction"></div>
 
@@ -55,8 +58,7 @@
 
     // 2) Define the initial batch that MUST be present before revealing the page.
     const initialBatch = [
-      { target: '#header-slot',     name: 'header',     args: ['Technical Art'] },
-      { target: '#background-slot', name: 'background', args: [] },
+      { target: '#header-slot',     name: 'header',     args: ['Technical Art'] }
     ];
 
     // 3) Kick off the batch and release the hold when (only) the batch is done.
