Replace header component slot with a direct header implementation and link for navigation

--- a/static/index.html
+++ b/static/index.html
@@ -34,8 +34,12 @@
     <img class="blur-01 fullscreen darken-01" alt="" aria-hidden="true" sizes="100vw" loading="eager"
         fetchpriority="high" src="graphics/bkg/wp3.jpg">
 
-    <!-- Background + Header component slots -->
-    <div id="header-slot"></div>
+    <!-- Header -->
+    <header class="flex-row nav-buttons">
+        <h1>
+            <a href="/" onclick="return tm.handleLinkClick(event, this)">Julien Liakos</a>
+        </h1>
+    </header>
 
     <main class="flex-center flex-grow">
         <div class="msg-box">
